Sat Sep 02 03:12:20 2000  George Lebl <jirka@5z.com>

	* gnome-druid.c: improve docs for append/prepend/insert

Sat Sep 02 01:57:10 2000  George Lebl <jirka@5z.com>

	* gnome-druid.[ch]: Add some sugar API.  Normally a druid is inside
	  a window, so there is now a gnome_druid_new_with_window function
	  which does this and a few other minor things for you.  Also
	  document the _new function.

	* gnome-helpsys.c: Eek, forgot to commit this earlier.  This uses
	  GError for the gnome_url functions now.

Fri Sep 01 03:33:09 2000  George Lebl <jirka@5z.com>

	* *.h:  All _get_type functions are now G_GNUC_CONST to make
	  things just a tad better optimized on gcc.

Fri Sep 01 02:58:58 2000  George Lebl <jirka@5z.com>

	* gnome-animator.c: fix memory leaks, remove old FIXMEs and minor
	  cleanup

	* gnome-druid.c: Make sure the non-visible button is never the
	  default one.

Thu Aug 31 15:21:38 2000  George Lebl <jirka@5z.com>

	* gnome-icon-sel.[ch]: use the new gnome-macros stuff and general
	  minor cleanup

Wed Aug 30 21:59:43 2000  George Lebl <jirka@5z.com>

	* gnome-animator.c, gnome-cursors.c, gnome-textfu.c: make
	  dependencies more fine grained then <gnome.h>

	* gnome-textfu.c, gnome-animator.c, gnome-app.c: minor cleanups,
	  use gnome-macros.h

	* gnome-druid-page-edge.[ch], gnome-druid-page-standard.[ch]:
	  add an argument so that we can add the toplevel watermark like
	  rp3 has.  Plus a couple of docs added/updated.

2000-08-30  Federico Mena Quintero  <federico@helixcode.com>

	* gnome-dock-item.c (gnome_dock_item_size_allocate): Fix unsigned
	vs. signed confusion, as always.

Wed Aug 30 04:34:07 2000  George Lebl <jirka@5z.com>

	* gnome-href.[ch]: use the gnome-macros.h macros

Wed Aug 30 04:06:22 2000  George Lebl <jirka@5z.com>

	* gnome-druid-page-edge.c, gnome-druid-page-standard.c:  Be anal
	  and use (double) instead of gfloat and use it in all the places
	  where doubles are set on the canvas.  Also never show the logoframe